<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.purl.rvl</groupId>
    <artifactId>rvl-server</artifactId>
    <packaging>war</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>RVL Server</name>
    
    <properties>
    	<version.maven.plugin.war>2.6</version.maven.plugin.war>
    	<version.maven.plugin.tomcat>2.2</version.maven.plugin.tomcat>
        <jersey.version>2.13</jersey.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.javax.servlet-api>3.1.0</version.javax.servlet-api>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.glassfish.jersey</groupId>
                <artifactId>jersey-bom</artifactId>
                <version>${jersey.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-grizzly2-http</artifactId>
        </dependency>
         <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-moxy</artifactId>
        </dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-multipart</artifactId>
		</dependency>
		<dependency>
    		<groupId>org.glassfish.jersey.test-framework.providers</groupId>
    		<artifactId>jersey-test-framework-provider-grizzly2</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>${version.javax.servlet-api}</version>
			<scope>provided</scope>
		</dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.9</version>
            <scope>test</scope>
        </dependency>
		
		<dependency>
		  	<groupId>org.purl.rvl</groupId>
		  	<artifactId>rvl-example</artifactId>
		  	<version>0.0.1-SNAPSHOT</version>
		</dependency>
		
		<dependency>
		  <groupId>com.wordnik</groupId>
		  <artifactId>swagger-jersey2-jaxrs_2.10</artifactId>
		  <version>1.3.12</version>
		</dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <inherited>true</inherited>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>org.purl.rvl.server.Main</mainClass>
                    <arguments>
                   	     <argument>-Xms1024m</argument>
         				 <argument>-Xmx2056m</argument>
         				 <argument>-XX:MaxPermSize=512m</argument>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>${version.maven.plugin.tomcat}</version>
				<configuration>
					<url>http://localhost:8080/manager/text</url>
					<server>TomcatServer</server>
				</configuration>
				<!-- <configuration>
					<port>8080</port>
					<path>/semvis</path>
					<protocol>org.apache.coyote.http11.Http11NioProtocol</protocol>
				</configuration>-->
				<!-- <executions>
					<execution>
						<id>tomcat-run</id>
						<goals>
							<goal>exec-war-only</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>-->
			</plugin>
            <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>${version.maven.plugin.war}</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
					<!-- webResources>
						<resource>
							<directory>src/docs/ui</directory>
						</resource>
					</webResources-->
				</configuration>
			</plugin>
        </plugins>
       <finalName>semvis</finalName>
    </build>
</project>
